# portguard-systray

./: Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json
icons/: icon.icns
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
