[package]
name = "portguard-systray"
version = "0.1.0"
description = "Systray app of portguard"
authors = ["wlh320"]
license = ""
repository = "https://www.github.com/wlh320/portguard-systray"
default-run = "portguard-systray"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.16"
env_logger = "0.9.0"
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "serde"] }
tauri = { version = "1.0.0-rc.8", features = [
  "dialog",
  "gtk-tray",
  "system-tray",
  "process-command-api",
] }
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true   # file size
